--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,9 @@
 
 name: Java CI with Maven
 
+env:
+  randomver: $(date +%s)
+
 on:
   push:
     branches: [ master ]
@@ -14,8 +17,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      datesec: $(date +%s)
+
 
     steps:
     - uses: actions/checkout@v2
@@ -26,6 +28,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag docker.pkg.github.com/rootnishi/demo-api/dempapi:$datesec
+      run: docker build . --file Dockerfile --tag docker.pkg.github.com/rootnishi/demo-api/dempapi:$randomver
     - name: Push Docker Image
-      run: docker push docker.pkg.github.com/rootnishi/demo-api/dempapi:$datesec
+      run: docker push docker.pkg.github.com/rootnishi/demo-api/dempapi:$randomver
