--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,9 +3,6 @@
 
 name: Java CI with Maven
 
-env:
-  randomver: date +%s
-
 on:
   push:
     branches: [ master ]
@@ -28,6 +25,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag docker.pkg.github.com/rootnishi/demo-api/dempapi:$randomver
+      run: docker build . --file Dockerfile --tag docker.pkg.github.com/rootnishi/demo-api/dempapi:01
     - name: Push Docker Image
-      run: docker push docker.pkg.github.com/rootnishi/demo-api/dempapi:$randomver
+      run: docker push docker.pkg.github.com/rootnishi/demo-api/dempapi:01
