--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag demoapi:1.0
     - name: Push Docker Image
-      run: docker push docker.io/rootnishi/demo-api:demoapi:1.0
+      run: docker push docker.io/rootnishi/demo-api/demoapi:1.0
