--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Docker Version
-      run: docker b--version
+      run: docker --version
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag demoapi:1.0
     - name: Push Docker Image
