--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,16 +17,22 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.13
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.13
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Docker Version
-      run: docker --version
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag demoapi:1.0
-    - name: Push Docker Image
-      run: docker push docker.pkg.github.com/rootnishi/demo-api/demoapi:1.0
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.13
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.13
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Docker Version
+        run: docker --version
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag demoapi:v1
+      - name: build-push
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.io
+          repository: rootnishi/demo-api
+          tags: v1
